moving to lein-git