@@ -1,10 +1,11 @@
-(defproject com.zensols.tools/actioncli "0.0.10"
+(defproject com.zensols.tools/actioncli "0.1.0-SNAPSHOT"
   :description "An action oriented framework to the CLI (and various other libraries)."
   :url "https://github.com/plandes/clj-actionclj"
   :license {:name "Apache License version 2.0"
             :url "https://www.apache.org/licenses/LICENSE-2.0"
             :distribution :repo}
-  :plugins [[lein-codox "0.9.5"]]
+  :plugins [[lein-codox "0.10.0"]
+            [org.clojars.cvillecsteele/lein-git-version "1.0.3"]]
   :codox {:metadata {:doc/format :markdown}
           :project {:name "Action CLI"}
           :output-path "target/doc/codox"}
@@ -20,4 +21,9 @@
                  ;; logging
                  [org.apache.logging.log4j/log4j-core "2.3"]
                  [org.clojure/tools.logging "0.3.1"]]
-  :profiles {:dev {:dependencies [[com.zensols/clj-append "1.0.4"]]}})
+  :profiles {:uberjar {:aot :all}
+             :provided {:dependencies [[org.clojure/clojure "1.8.0"]]}
+             :dev
+             {:jvm-opts
+              ["-Dlog4j.configurationFile=test-resources/log4j2.xml" "-Xms4g" "-Xmx12g" "-XX:+UseConcMarkSweepGC"]
+              :dependencies [[com.zensols/clj-append "1.0.4"]]}})
